# Calculator-C-Kernel

./: CMakeLists.txt  README.md  main.c
Calculator-Core/include/: buffer.h  error.h  go.h  keypress.h  libs.h  stack.h
Calculator-Core/src/: buffer.c  error.c  go.c  keypress.c  main.c  stack.c
